Update package.json for project renaming and dependencies

--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "3d-manual",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "3d-manual-web",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "mammoth": "^1.11.0",
-    "openai": "^6.15.0"
+    "next": "15.0.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "openai": "^4.56.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
